21/12/08 Julien Dutheil
* Bug fixed when there is only one class in GammaDiscreteDistribution.

21/07/08 -*- Version 1.6.0 -*-

12/11/08 Sylvain Gaillard
* New functions seq, breaks, range and nclassScott in VectorTools.

07/11/08 Julien Dutheil
* New function randMultinomial in RandomTools.

07/11/08 Sylvain Gaillard
* Fixed a bug in RandomTools::getSample.

06/11/08 Sylvain Gaillard
* Added boolean flag in RandomTools::getSample for sampling with replacement.
This function now throw IndexOutOfBoundsException if size of the sample is
higher than the original vector size and replacement is off.

28/10/08 Julien Dutheil
* New Numerical cross derivatives (3 points method only).
* New functions in NumTools to compute Hessian matrices.

21/07/08 -*- Version 1.5.0 -*-

04/04/08 Sylvain Gaillard
* New function paste in VectorTools.

03/04/08 Sylvain Gaillard & Julien Dutheil
* New functions whichAll and countValues in VectorTools.
* Parametrizable now have a getNumberOfParameters method.
* New function getRow in DataTable.

18/03/08 Julien Dutheil
* Added StatTest interface.
* Added function RandomTools::pChisq and pGamma.
* VectorTools::median now properly works.

31/01/08 Julien Dutheil
* Bug fixed in exponential law.

18/01/08 -*- Version 1.4.0 -*-

18/01/08 Celine Scornavacca & Julien Dutheil
* New functions containsAll and diff in VectorTools.

09/01/08 Julien Dutheil
* All classes included in the new 'bpp' namespace.

13/12/07 Julien Dutheil
* New method uniRoot in NumTools.

24/12/07 Julien Dutheil
* New class InvariantMixedDiscreteDistribution.

05/12/07 Julien Dutheil
* Bug fixed in recopy of MetaOptimizer.

24/11/07 Julien Dutheil
* Another bug fixed in numerical derivatives!

13/11/07 Julien Dutheil
* New class ExponentialDiscreteDistribution + bug fixed in Gamma when classes
are not distinguishables.

24/10/07 Julien Dutheil
* Added missing references in VectorTools + new methods 'append'.

22/10/07 Julien Dutheil
* Numerical derivatives improved.